fix icon spacing class

--- a/lesscss/components/libraries.less
+++ b/lesscss/components/libraries.less
@@ -15,7 +15,7 @@
   }
 }
 
-.c-listing-toggle::before {
+.c-listing-button.fas::before {
   padding-right: @small-spacer;
 }
 
