--- a/lesscss/components/listing.less
+++ b/lesscss/components/listing.less
@@ -27,10 +27,6 @@
       display: flex;
     }
   }
-
-  .fa.c-listing-toggle:before {
-    padding-right: 5px;
-  }
 }
 
 .c-folder {
